tests/miniJava/neg/006625_mutation.MiniJava
class java { public static void Main ( String true [ ] java ) { { } } }
